--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <body>
     <header>
-        <h1>sayIt 🔊</h1>
+        <h1>Speak Up 🔊</h1>
         <p class="text-center">Easily convert spoken words to text and instantly share across various social media.
             <br><br>
         </p>
